--- a/src/styles/TabsNav.css
+++ b/src/styles/TabsNav.css
@@ -46,4 +46,12 @@ ul li:hover svg path {
     border-bottom: 4px solid var(--main-red);
 }
 
+.tab-selected {
+    color: white;
+}
+
+.tab-selected svg path {
+    fill: white;
+}
+
 
