--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -27,12 +27,11 @@ a {
 
 /* header section */
 .header-container {
-    width: 100vw;
-    height: 35vw;
+    width: 100%;
+    height: 100%;
     position: relative;
     background: radial-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7)),
-    url('../images/bg.jpg') no-repeat center center/cover
-    
+    url('../images/bg.jpg') no-repeat center center/cover 
 }
 
 .header-container::after {
